--- a/src/app/css/_moduleIdentityDetail.scss
+++ b/src/app/css/_moduleIdentityDetail.scss
@@ -12,6 +12,7 @@
         width: calc(80% - 50px);
         padding-left: 30px;
         padding-right: 20px;
+        right: 0;
         .json-editor {
             height: calc(100vh - 280px);
         }
