--- a/src/app/devices/pnp/components/digitalTwinDetail.scss
+++ b/src/app/devices/pnp/components/digitalTwinDetail.scss
@@ -3,7 +3,16 @@
  * Licensed under the MIT License
  **********************************************************/
  @import '../../../css/themes';
+ @import '../../../css/variables';
 
- .digitaltwin-pivot {
-    padding-left: 22px;
+ @media screen and (min-width: $screenSize) {
+   .digitaltwin-pivot {
+      padding-left: 22px;
+   }
+ }
+
+ @media screen and (max-width: $screenSize) {
+    .digitaltwin-pivot {
+       width: 95vw;
+    }
  }
